Add columnar backend to integrated workflow tests